// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer 1`] = `
<Timer
  delay={1000}
  start={0}
  step={1}
>
  0
</Timer>
`;

exports[`Timer w/ render function 1`] = `
<Timer
  delay={1000}
  id="timer"
  start={0}
  step={1}
>
  <div
    id="test"
  >
    Timer id: '
    timer
    ', tick: 
    0
  </div>
</Timer>
`;

exports[`Timer w/ start 1`] = `
<Timer
  delay={1000}
  id="timer"
  start={10}
  step={1}
>
  <div
    id="test"
  >
    Timer id: '
    timer
    ', tick: 
    10
  </div>
</Timer>
`;
